--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
             <version>3.6</version>
         </dependency>
 
+        <!-- 参数校验 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
     </dependencies>
 
 
